known issue with ./../bin/spark-submit --class SimpleApp Perfect for the rest